--- a/dtube/package.json
+++ b/dtube/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "2.1.5",
     "web-vitals": "^2.1.2",
     "web3": "^1.0.0-beta.46"
