--- a/dtube/package.json
+++ b/dtube/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ipfs-http-client": "^55.0.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^6.2.1",
