--- a/dtube/package.json
+++ b/dtube/package.json
@@ -11,6 +11,7 @@
     "ipfs-http-client": "^55.0.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "2.1.5",
     "react-svg": "^14.1.6",
